# opencontractau

./: .gitignore  CONTRIBUTING.md  LEGAL.md  LICENSE  README.md  pyproject.toml
.github/workflows/: refresh-ocds-data.yml
scripts/: azure-setup.sh
src/au_procurement/: __init__.py  api.py  cli.py
src/au_procurement/models/: ocds.py
src/au_procurement/scrapers/: base.py
src/au_procurement/scrapers/_tendersearch/: client.py  parser.py  transformer.py
src/au_procurement/scrapers/act/: scraper.py
src/au_procurement/scrapers/federal/: scraper.py
src/au_procurement/scrapers/nsw/: historical.py  live.py
src/au_procurement/scrapers/nt/: scraper.py
src/au_procurement/scrapers/qld/: ckan.py  tmr.py
src/au_procurement/transformers/: act.py  nt.py  qld.py  qld_generic.py  tas.py
src/opencontractau/: __init__.py  api.py  cli.py
src/opencontractau/models/: ocds.py
src/opencontractau/scrapers/: base.py  browser.py
src/opencontractau/scrapers/nsw/: live.py  (+1 more)
src/opencontractau/transformers/: act.py  council.py  nt.py  qld.py  qld_generic.py  tas.py
src/opencontractsau/: __init__.py  api.py  cli.py
src/opencontractsau/models/: ocds.py
src/opencontractsau/scrapers/: base.py
src/opencontractsau/transformers/: act.py  council.py  nt.py  qld.py  qld_generic.py  tas.py
tests/: test_act_transformer.py  test_federal_scraper.py  test_nt_transformer.py  test_qld_generic_transformer.py  test_qld_transformer.py  test_sa_scraper.py  test_tas_transformer.py  test_tendersearch.py
tests/fixtures/: nt_detail_25992.html  tas_detail_14000.html  vic_detail_229501.html
(+56 files in other folders)
