[project]
name = "au-procurement"
version = "0.3.0"
description = "OC4IDS-compliant scraper for Australian government procurement data"
authors = [
    { name = "Justin Trollip", email = "justin@demiton.io" },
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
    "aiofiles>=24.0.0",
    "urllib3>=2.0.0",
    "curl_cffi>=0.7.0",
]

[project.scripts]
au-procurement = "au_procurement.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/au_procurement"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
